# app/Http/Requests/Customer/ReviewRequest.php
@@ -4,6 +4,22 @@ namespace App\Http\Requests\Customer;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema(
+ *     schema="ReviewRequest",
+ *     title="Review Request",
+ *     description="Request body for Review Request",
+ *     required={"stars", "message"},
+ *     @OA\Property(
+ *         property="stars",
+ *         type="string"
+ *     ),
+ *     @OA\Property(
+ *         property="message",
+ *         type="string"
+ *     ),
+ * )
+ */
 class ReviewRequest extends FormRequest
 {
     /**
